# uav-coverage-planning

./: .gitignore  README.md  api.py  boustrophedon.py  main.py  oblique.py  oblique_oneplane.py  pyproject.toml  spiral.py  spiral_nopc.py  viewpoint_optimized.py
examples/: boustrophedon.py  cylinder.py  cylinder_nopc.py  main.py  oblique.py  oblique_oneplane.py  spiral.py  spiral_nopc.py  viewpoint_optimized.py
src/uav_planners/: __init__.py  __main__.py
src/uav_planners/cli/: __init__.py  tiles.py
src/uav_planners/constraints/: __init__.py  base_validator.py  collision_checker.py  coverage_evaluator.py  enhanced_obstacle_avoidance.py  safety_corridor.py  visibility_checker.py
src/uav_planners/core/: __init__.py  compat.py  config.py  data_loader.py  integration.py  interfaces.py  mission_config.py  pipeline.py  planner_result.py
src/uav_planners/geometry/: __init__.py  base_generator.py  coordinate_utils.py  facade_analyzer.py  registry.py
src/uav_planners/io/: __init__.py  pointcloud_loader.py  tileset_loader.py
src/uav_planners/models/: __init__.py  camera.py  generator_config.py  pointcloud.py  route_collection.py  trajectory.py  waypoint.py
src/uav_planners/optimization/: __init__.py  base_optimizer.py  capture_point_sampler.py  keypoint_extractor.py  overlap_controller.py  route_sequence_optimizer.py  trajectory_smoother.py  tsp_solver.py
src/uav_planners/utils/: __init__.py  camera_scale_conversions.py  common.py  numba_kernels.py  pointcloud_aabb.py  pointcloud_preprocess.py  waypoint_frame_converter.py
visualization/: README.md  index.html
(+10 files in other folders)
